class User {
  final int dbID;
  final String name;
  final String deviceID;
  final String photoPath;

  User({
    required this.dbID,
    required this.name,
    required this.deviceID,
    required this.photoPath,
  });
}
